--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -115,7 +115,7 @@ footer{
 .home-title{
   margin-top: 10px;
 }
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card, .camping-card, .rapids-card,{
   margin: 200px 0;
 }
 
@@ -127,4 +127,7 @@ nav {
 }
 main section img {
   box-sizing: border-box;
+}
+.wireframe{
+  width: 600px ;
 }
